@@ -665,6 +665,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21535) RecentChanges RSS feed now always recognises the namespace filter,
   previously it sometimes didn't due to caching.
 * (bug 20388) ProfilerSimpleText no longer outputs comment on action=raw
+* refreshLinks.php now purges orphaned redirect table rows
 
 == API changes in 1.16 ==
 
